# Parser-of-vacancies-from-hh.ru-superjob-sites

./: README.md  pyproject.toml
src/: DBManager.py  Employers.py  Saver.py  main.py  queries.sql  utils.py
